[gd_scene load_steps=7 format=3 uid="uid://cecmoqk22suvi"]

[ext_resource type="Script" path="res://components/patron_tokens/patron_token.gd" id="1_qnwod"]
[ext_resource type="Texture2D" uid="uid://bl5621syfg20a" path="res://assets/table/token/athena.png" id="2_bfsx4"]
[ext_resource type="Shader" path="res://shaders/shader.gdshader" id="2_qwwv7"]
[ext_resource type="PackedScene" uid="uid://d1vri2m1wvvey" path="res://shaders/fx.tscn" id="3_y7j1m"]
[ext_resource type="PackedScene" uid="uid://3cx7lpgelun1" path="res://ui/mouse_watcher.tscn" id="5_bef7w"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6sarh"]
shader = ExtResource("2_qwwv7")
shader_parameter/pan_speed = Vector2(0, 0)
shader_parameter/replace_color1 = Color(0, 0, 0, 1)
shader_parameter/replace_with_color1 = Color(0, 0, 0, 1)
shader_parameter/replace_color2 = Color(0, 0, 0, 1)
shader_parameter/replace_with_color2 = Color(0, 0, 0, 1)
shader_parameter/replace_color3 = Color(0, 0, 0, 1)
shader_parameter/replace_with_color3 = Color(0, 0, 0, 1)
shader_parameter/replace_color4 = Color(0, 0, 0, 1)
shader_parameter/replace_with_color4 = Color(0, 0, 0, 1)
shader_parameter/replace_color5 = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/replace_with_color5 = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/tint_color = Color(0, 0, 0, 1)
shader_parameter/tint_strength = 0.0
shader_parameter/tint_auto_flash_speed = 0.0
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_strength = 0.0
shader_parameter/use_exclude_tint = true
shader_parameter/exclude_tint = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/exclude_tint2 = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/exclude_tint3 = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/exclude_tint4 = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_thickness = 0
shader_parameter/outline_diagonals = false
shader_parameter/outline_start_time = 0.0
shader_parameter/outline_glow_speed = 2.5
shader_parameter/outline_glow_min = 1.0
shader_parameter/outline_glow_max = 1.0
shader_parameter/fog_enabled = false
shader_parameter/fog_opacity = 0.5
shader_parameter/fog_density = 0.25
shader_parameter/fog_speed = Vector2(0.02, 0.01)
shader_parameter/transparency = 1.0
shader_parameter/transparency_glow = false
shader_parameter/transparency_glow_min = 0.0
shader_parameter/transparency_glow_speed = 2.0

[node name="PatronToken" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 46.0
offset_bottom = 30.0
pivot_offset = Vector2(32, 11)
mouse_filter = 2
script = ExtResource("1_qnwod")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_6sarh")
texture = ExtResource("2_bfsx4")
centered = false

[node name="FX" parent="Sprite2D" instance=ExtResource("3_y7j1m")]

[node name="Polygon" type="CollisionPolygon2D" parent="."]
position = Vector2(9, -14)
polygon = PackedVector2Array(1, 36, 0, 33, 0, 25, 1, 22, 2, 20, 5, 17, 7, 16, 10, 15, 18, 15, 21, 16, 23, 17, 27, 21, 28, 24, 28, 34, 27, 37, 23, 41, 21, 42, 18, 43, 10, 43, 7, 42, 5, 41, 2, 38)

[node name="Mouse" parent="." node_paths=PackedStringArray("watched") instance=ExtResource("5_bef7w")]
watched = NodePath("../Polygon")

[connection signal="clicked" from="Mouse" to="." method="_on_mouse_clicked"]
[connection signal="entered" from="Mouse" to="." method="_on_mouse_entered"]
[connection signal="exited" from="Mouse" to="." method="_on_mouse_exited"]
