[gd_scene load_steps=3 format=3 uid="uid://bfpjr68ps5dvj"]

[ext_resource type="Script" path="res://components/patron_tokens/patron_token.gd" id="1_usj27"]
[ext_resource type="Texture2D" uid="uid://bp07pkbvmqsh3" path="res://assets/table/token/hephaestus.png" id="2_sa87x"]

[node name="PatronToken" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 44.0
offset_bottom = 28.0
pivot_offset = Vector2(32, 11)
mouse_filter = 2
script = ExtResource("1_usj27")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_sa87x")
centered = false

[node name="ClickableArea" type="Area2D" parent="."]

[node name="Polygon" type="CollisionPolygon2D" parent="ClickableArea"]
position = Vector2(7, -15)
polygon = PackedVector2Array(0, 38, 0, 20, 2, 18, 11, 18, 13, 20, 13, 26, 31, 26, 32, 27, 32, 31, 31, 32, 13, 32, 13, 38, 11, 40, 2, 40)

[connection signal="input_event" from="ClickableArea" to="." method="_on_clickable_area_input_event"]
[connection signal="mouse_entered" from="ClickableArea" to="." method="_on_clickable_area_mouse_entered"]
[connection signal="mouse_exited" from="ClickableArea" to="." method="_on_clickable_area_mouse_exited"]
